# shikinseki

./: .gitignore  ARTICLE.md  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
action-gate/: README.md  example_ops.py
ai-eval-logtriage/: README.md  predictions_real_google_gemini-2.5-flash-lite.json  predictions_real_meta-llama_llama-3.2-3b-instruct.json  predictions_real_openai_gpt-4o-mini.json  prepare_testset.py  run_eval_logtriage.py  testset.json
ai-eval-sentiment/: README.md  predictions.json  predictions_real_google_gemini-2.5-flash-lite.json  predictions_real_meta-llama_llama-3.2-3b-instruct.json  predictions_real_openai_gpt-4o-mini.json  run_eval.py  run_eval_realapi.py  testset.json
data-harvester/: README.md  example_mock.py
edge-validator/: README.md  example_advanced.py  example_sequential.py
leak-guard/: README.md  example_leak.py
rag-eval/: README.md  _verify_publish.py  answers_gemini.json  answers_gemini_norag.json  citation_check_answers_gemini.json  diag_llama_result.txt  fal_llm.py  judged_gemini_by_claude-sonnet.json  judged_gemini_by_gemini.json  judged_gemini_by_gpt4o-mini.json  judged_gemini_by_gpt4o.json  judged_gemini_by_llama.json  judged_gemini_by_llama31-8b.json  judged_gemini_norag_by_gemini.json  judged_gemini_norag_by_gpt4o-mini.json  judged_gemini_norag_by_llama31-8b.json  keypoints_ja.json  rag_answer.py  rag_citation_check.py  rag_diag_llama.py  rag_human_kappa.py  rag_judge.py  rag_label.py  rag_min.py  rag_stats.py  run_round2.py  run_strong_judges.py  translations_ja.json
shikinseki/: __init__.py  (+4 more)
(+7 files in other folders)
